// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloseIcon: Component should render correctly 1`] = `
<close-white.svg
  style={
    Object {
      "fill": "#1d1d20",
      "height": "60px",
      "width": "60px",
    }
  }
/>
`;

exports[`CloseIcon: Component should render with custom styles 1`] = `
<close-white.svg
  style={
    Object {
      "fill": "blue",
      "height": "60px",
      "width": "60px",
    }
  }
/>
`;
